css for business card, new icons and parlax

--- a/jess-hek.html
+++ b/jess-hek.html
@@ -10,10 +10,20 @@
     <header>
     </header>
     <main>
-        <h1>Jess Hek</h1>
-        <section>
-            <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
-        <section>
+        <div class="hero-image">
+
+        </div>
+        <div class="card">
+            <h1>Jess Hek</h1>
+            <p>Full stack developer</p>
+            <ul>
+                <li><a href="tel:+61431213400"><img src="images/phone-call-svgrepo-com.svg"/>0431 213 400</a></li>
+                <li><a href="mailto:jessica.hek@hotmail.com"><img src="images/email-svgrepo-com.svg"/>jessica.hek@hotmail.com</a></li>
+                <li><a href="index.html" target="_blank"><img src="images/portfolio-svgrepo-com.svg"/>My online portfolio</a></li>
+                <li><a href="https://www.linkedin.com/in/jessicahek/" target="_blank"><img src="images/linkedin-svgrepo-com.svg"/>LinkedIn</a></li>
+                <li><a href="https://github.com/what-the-hek" target="_blank"><img src="images/github-svgrepo-com.svg"/>Github</a></li>
+            </ul>
+            </div>
     </main>
     <footer>
     </footer> 
