making page responsive

--- a/jess-hek.html
+++ b/jess-hek.html
@@ -10,9 +10,8 @@
     <header>
     </header>
     <main>
-        <div class="hero-image">
+        <div class="hero-image"></div>
 
-        </div>
         <div class="card">
             <h1>Jess Hek</h1>
             <p class="tag">Full stack developer</p>
@@ -33,7 +32,7 @@
                 <p>Scan to download contact file</p>
                 <img src="images/qr-code.png">
             </div>
-            </div>
+        </div>
     </main>
     <footer>
     </footer> 
