alt text for QR code image

--- a/jess-hek.html
+++ b/jess-hek.html
@@ -30,7 +30,7 @@
             </ul>
             <div class="qr-code">
                 <p>Scan to download contact file</p>
-                <img src="images/qr-code.png">
+                <img src="images/qr-code.png" alt="QR code">
             </div>
         </div>
     </main>
