Added extra project descriptions

--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -24,11 +24,12 @@
         </section>
         <section class="showcase-section">
             <div class="project-card">
-                <a><img src="images/group-project.png"><p class="hide">Demo video</p></a>
+                <a><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
-                    <p>Project description</p>
-                    <a>Link to live project</a>
+                    <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. As part of this group project, my main 
+                        role was to create the 'hero' section and style the user profile cards.</p>
+                    <a>Visit the Tech Diversity website</a>
                     <div>
                         <i>React</i>
                         <i>DRF</i>
@@ -41,8 +42,9 @@
                 <a><img src="images/crowdfunding.png"><p>Demo video</p></a>
                 <div>
                     <h2>Healium</h2>
-                    <p>Project description</p>
-                    <a>Link to live project</a>
+                    <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse. This was a solo project and I
+                    chose the theme for the website based on my 14 years experience working in emergency services.</p>
+                    <a>Visit the Healium website</a>
                     <div>
                         <i>React</i>
                         <i>JavaScript</i>
@@ -55,8 +57,7 @@
                 <a><img src="images/qr-code.png"><p>Demo video</p></a>
                 <div>
                     <h2>She Codes News</h2>
-                    <p>Project description</p>
-                    <a>Link to live project</a>
+                    <p>This solo project is a news website designed for She Codes Australia. It includes the ability to create, edit and delete news articles.</p>
                     <div>
                         <i>Django</i>
                         <i>CSS</i>
