editing to fix side bio and scroll projects

--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <main>
-        <section class="bio-section">
+                <section class="bio-section">
             <div>
                 <img src="images/me4.jpg">
                 <h1>Jess Hek</h1>
+                <p class="tag">Full stack developer</p>
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
                 <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p>
                 <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
@@ -24,13 +25,13 @@
         </section>
         <section class="showcase-section">
             <div class="project-card">
-                <a><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
+                <a class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
                     <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. As part of this group project, my main 
                         role was to create the 'hero' section and style the user profile cards.</p>
                     <a>Visit the Tech Diversity website</a>
-                    <div>
+                    <div class="stack">
                         <i>React</i>
                         <i>DRF</i>
                         <i>CSS</i>
@@ -39,13 +40,13 @@
                 </div>
             </div>
             <div class="project-card">
-                <a><img src="images/crowdfunding.png"><p>Demo video</p></a>
-                <div>
+                <a class="project-img"><img src="images/crowdfunding.png"><p>Demo video</p></a>
+                <div class="project-details">
                     <h2>Healium</h2>
                     <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse. This was a solo project and I
                     chose the theme for the website based on my 14 years experience working in emergency services.</p>
                     <a>Visit the Healium website</a>
-                    <div>
+                    <div class="stack">
                         <i>React</i>
                         <i>JavaScript</i>
                         <i>Django Rest Framework</i>
@@ -54,11 +55,11 @@
                 </div>
             </div>
             <div class="project-card">
-                <a><img src="images/qr-code.png"><p>Demo video</p></a>
-                <div>
+                <a class="project-img"><img src="images/qr-code.png"><p>Demo video</p></a>
+                <div class="project-details">
                     <h2>She Codes News</h2>
                     <p>This solo project is a news website designed for She Codes Australia. It includes the ability to create, edit and delete news articles.</p>
-                    <div>
+                    <div class="stack">
                         <i>Django</i>
                         <i>CSS</i>
                         <i>HTML</i>
