--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -28,8 +28,8 @@
                 <a class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
-                    <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. As part of this group project, my main 
-                        role was to create the 'hero' section and style the user profile cards.</p>
+                    <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. My main 
+                        role in this group project was to create the 'hero' section and style the user profile cards.</p>
                     <a>Visit the Tech Diversity website</a>
                     <div class="stack">
                         <i>React</i>
@@ -58,7 +58,8 @@
                 <a class="project-img"><img src="images/qr-code.png"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>She Codes News</h2>
-                    <p>This solo project is a news website designed for She Codes Australia. It includes the ability to create, edit and delete news articles.</p>
+                    <p>This solo project is a news website designed for She Codes Australia. It includes the ability for users to create an account,
+                        create, edit and delete news articles, and comment on news articles.</p>
                     <div class="stack">
                         <i>Django</i>
                         <i>CSS</i>
