added tech stacks

--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -33,9 +33,9 @@
                     <a>Visit the Tech Diversity website</a>
                     <div class="stack">
                         <i>React</i>
-                        <i>DRF</i>
-                        <i>CSS</i>
                         <i>JavaScript</i>
+                        <i>Django Rest Framework</i>
+                        <i>CSS</i>
                     </div>
                 </div>
             </div>
@@ -50,6 +50,7 @@
                         <i>React</i>
                         <i>JavaScript</i>
                         <i>Django Rest Framework</i>
+                        <i>Python</i>
                         <i>CSS</i>
                     </div>
                 </div>
@@ -61,9 +62,10 @@
                     <p>This solo project is a news website designed for She Codes Australia. It includes the ability for users to create an account,
                         create, edit and delete news articles, and comment on news articles.</p>
                     <div class="stack">
+                        <i>Python</i>
                         <i>Django</i>
-                        <i>CSS</i>
                         <i>HTML</i>
+                        <i>CSS</i>
                     </div>
                 </div>
             </div>
