removed links to projects

--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -30,7 +30,7 @@
                     <h2>Tech Diversity</h2>
                     <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. My main 
                         role in this group project was to create the 'hero' section and style the user profile cards.</p>
-                    <a>Visit the Tech Diversity website</a>
+<!--                     <a>Visit the Tech Diversity website</a> -->
                     <div class="stack">
                         <i>React</i>
                         <i>JavaScript</i>
@@ -45,7 +45,7 @@
                     <h2>Healium</h2>
                     <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse. This was a solo project and I
                     chose the theme for the website based on my 14 years experience working in emergency services.</p>
-                    <a>Visit the Healium website</a>
+<!--                     <a>Visit the Healium website</a> -->
                     <div class="stack">
                         <i>React</i>
                         <i>JavaScript</i>
