--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -9,23 +9,26 @@
 </head>
 <body>
     <main>
-                <section class="bio-section">
+        <section class="bio-section">
             <div>
                 <img src="images/me4.jpg">
                 <h1>Jess Hek</h1>
                 <p class="tag">Full stack developer</p>
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
-                <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p>
+                <!-- <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p> -->
                 <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
             </div>
-            <div>
+            <div id="qr-code">
                 <p>Scan QR code to download contact file and business card</p>
                 <img src="images/qr-code.png">
             </div>
         </section>
+
+        <div class="filler"></div>
+
         <section class="showcase-section">
             <div class="project-card">
-                <a class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
+                <a href="tech-diversity.html" class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
                     <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. My main 
@@ -40,7 +43,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <a class="project-img"><img src="images/crowdfunding.png"><p>Demo video</p></a>
+                <a href="healium.html" class="project-img"><img src="images/crowdfunding.png"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>Healium</h2>
                     <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse. This was a solo project and I
@@ -56,7 +59,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <a class="project-img"><img src="images/qr-code.png"><p>Demo video</p></a>
+                <a href="she-codes-news.html" class="project-img"><img src="images/django-news.png"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>She Codes News</h2>
                     <p>This solo project is a news website designed for She Codes Australia. It includes the ability for users to create an account,
