editing css and prject pages

--- a/showcase/healium.html
+++ b/showcase/healium.html
@@ -13,11 +13,12 @@
             <div>
                 <h1>Healium</h1>
                 <p class="tag">Solo crowdfunding project</p>
-                <p>I've been working in government for almost 16 years with a background in business process improvement.</p>
-                <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p>
-                <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
+                <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse.</p>
+                <p>This was a solo project and I chose the theme for the website based on my 14 years experience working in emergency services..</p>
+                <p>TBA</p>
+                <a href="https://keen-gecko-1cbdfe.netlify.app/" target="_blank">Visit the Healium website</a>
             </div>
-            <a href="showcase.html" id="btn">all projects</a>
+            <a href="showcase.html" id="btn">All projects</a>
         </section>
 
         <div class="filler"></div>
