--- a/showcase/she-codes-news.html
+++ b/showcase/she-codes-news.html
@@ -13,11 +13,11 @@
             <div>
                 <h1>She Codes News</h1>
                 <p class="tag">Solo news publishing project</p>
-                <p>I've been working in government for almost 16 years with a background in business process improvement.</p>
-                <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p>
-                <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
+                <p>This solo project is a news website designed for She Codes Australia.</p>
+                <p>It includes the ability for users to create an account, create, edit and delete news articles, and comment on news articles.</p>
+                <p>TBA</p>
             </div>
-            <a href="showcase.html" id="btn">all projects</a>
+            <a href="showcase.html" id="btn">All projects</a>
         </section>
 
         <div class="filler"></div>
