--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -17,11 +17,13 @@
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
                 <!-- <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p> -->
                 <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
-            </div>
-            <div id="qr-code">
                 <p>Scan QR code to download contact file and business card</p>
                 <img src="images/qr-code.png">
             </div>
+            <!-- <div id="qr-code">
+                <p>Scan QR code to download contact file and business card</p>
+                <img src="images/qr-code.png">
+            </div> -->
         </section>
 
         <div class="filler"></div>
@@ -31,9 +33,7 @@
                 <a href="tech-diversity.html" class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
-                    <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career. My main 
-                        role in this group project was to create the 'hero' section and style the user profile cards.</p>
-<!--                     <a>Visit the Tech Diversity website</a> -->
+                    <p>Group project - A website that showcases diversity in tech and inspires women to pursue a career in tech.</p>
                     <div class="stack">
                         <i>React</i>
                         <i>JavaScript</i>
@@ -46,9 +46,7 @@
                 <a href="healium.html" class="project-img"><img src="images/crowdfunding.png"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>Healium</h2>
-                    <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse. This was a solo project and I
-                    chose the theme for the website based on my 14 years experience working in emergency services.</p>
-<!--                     <a>Visit the Healium website</a> -->
+                    <p>Solo project - Crowdfunding website to help people financially recover from family and domestic abuse.</p>
                     <div class="stack">
                         <i>React</i>
                         <i>JavaScript</i>
@@ -62,13 +60,25 @@
                 <a href="she-codes-news.html" class="project-img"><img src="images/django-news.png"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>She Codes News</h2>
-                    <p>This solo project is a news website designed for She Codes Australia. It includes the ability for users to create an account,
-                        create, edit and delete news articles, and comment on news articles.</p>
+                    <p>Solo project - A She Codes news website for users to create and share information.</p>
                     <div class="stack">
                         <i>Python</i>
                         <i>Django</i>
                         <i>HTML</i>
                         <i>CSS</i>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <a href="flappy-pig.html" class="project-img"><img src="images/flappypig1.PNG"><p>Demo video</p></a>
+                <div class="project-details">
+                    <h2>Flappy Pig</h2>
+                    <p>Solo project - A farm themed version of the popular 2013 game, Flappy Bird</p>
+                    <div class="stack">
+                        <i>Lua</i>
+                        <i>Love2D</i>
+                        <i>Aseprite</i>
+                        <i>Bfxr</i>
                     </div>
                 </div>
             </div>
