--- a/showcase/tech-diversity.html
+++ b/showcase/tech-diversity.html
@@ -13,11 +13,12 @@
             <div>
                 <h1>Tech Diversity</h1>
                 <p class="tag">Group project</p>
-                <p>I've been working in government for almost 16 years with a background in business process improvement.</p>
-                <p>I enjoy working with front and back end code, and my favourite She Codes project was the crowdfunding website.</p>
-                <p>When I'm not at She Codes I'm playing games, gardening or making clay miniatures for dungeons and dragons.</p>
+                <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career.</p>
+                <p>My main role in this group project was to create the 'hero' section and style the user profile cards.</p>
+                <p>TBA</p>
+                <a href="https://warm-creponne-806b0e.netlify.app/" id="web-btn" target="_blank">Visit the Tech Diversity website</a>
             </div>
-            <a href="showcase.html" id="btn">all projects</a>
+            <a href="showcase.html" id="btn">All projects</a>
         </section>
 
         <div class="filler"></div>
