--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -11,7 +11,7 @@
     <main>
         <section class="bio-section">
             <div>
-                <img src="images/me4.jpg">
+                <img id="bio-pic" src="images/bio-pic2.png">
                 <h1>Jess Hek</h1>
                 <p class="tag">Full stack developer</p>
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
