--- a/showcase/healium.html
+++ b/showcase/healium.html
@@ -14,8 +14,13 @@
                 <h1>Healium</h1>
                 <p class="tag">Solo crowdfunding project</p>
                 <p>Healium is a crowdfunding website designed to help people financially recover from family and domestic abuse.</p>
-                <p>This was a solo project and I chose the theme for the website based on my 14 years experience working in emergency services..</p>
-                <p>TBA</p>
+                <p>I chose the theme for this website based on my 14 years experience working in emergency services. The soft design is intentional, to create a safe and comforting feeling for the user.</p>
+                <p>Key features include:</p>
+                <ul>
+                    <li>a 'quick exit' button that logs the user out and redirects the page, for their personal safety</li>
+                    <li>randomly generated user names to help protect the users identity</li>
+                    <li>the ability for users to create a crowdfunding project, or pledge to an existing project</li>
+                </ul>
                 <a href="https://keen-gecko-1cbdfe.netlify.app/" target="_blank">Visit the Healium website</a>
             </div>
             <a href="showcase.html" id="btn">All projects</a>
