--- a/showcase/she-codes-news.html
+++ b/showcase/she-codes-news.html
@@ -14,8 +14,13 @@
                 <h1>She Codes News</h1>
                 <p class="tag">Solo news publishing project</p>
                 <p>This solo project is a news website designed for She Codes Australia.</p>
-                <p>It includes the ability for users to create an account, create, edit and delete news articles, and comment on news articles.</p>
-                <p>TBA</p>
+                <p>I created this website using Django and CSS.</p>
+                <p>Features include the ability for users to:</p>
+                <ul>
+                    <li>create an account and log in</li>
+                    <li>create, edit and delete news articles</li>
+                    <li>comment on news articles</p></li>
+                </ul>
             </div>
             <a href="showcase.html" id="btn">All projects</a>
         </section>
