--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -11,7 +11,7 @@
     <main>
         <section class="bio-section">
             <div>
-                <img id="bio-pic" src="images/bio-pic2.png">
+                <img id="bio-pic" src="images/bio-pic3.png">
                 <h1>Jess Hek</h1>
                 <p class="tag">Full stack developer</p>
                 <!-- <p>I've been working in government for almost 16 years with a background in business process improvement.</p> -->
@@ -20,10 +20,6 @@
                 <p>Scan QR code to download contact file and business card</p>
                 <img src="images/qr-code.png">
             </div>
-            <!-- <div id="qr-code">
-                <p>Scan QR code to download contact file and business card</p>
-                <img src="images/qr-code.png">
-            </div> -->
         </section>
 
         <div class="filler"></div>
@@ -73,7 +69,7 @@
                 <a href="flappy-pig.html" class="project-img"><img src="images/flappypig1.PNG"><p>Demo video</p></a>
                 <div class="project-details">
                     <h2>Flappy Pig</h2>
-                    <p>Solo project - A farm themed version of the popular 2013 game, Flappy Bird</p>
+                    <p>Solo project - A farm themed version of the popular 2013 game, Flappy Bird.</p>
                     <div class="stack">
                         <i>Lua</i>
                         <i>Love2D</i>
