--- a/showcase/tech-diversity.html
+++ b/showcase/tech-diversity.html
@@ -15,8 +15,15 @@
                 <p class="tag">Group project</p>
                 <p>The purpose of this website is to showcase diversity in tech and inspire women to pursue a tech career.</p>
                 <p>My main role in this group project was to create the 'hero' section and style the user profile cards.</p>
-                <p>TBA</p>
-                <a href="https://warm-creponne-806b0e.netlify.app/" id="web-btn" target="_blank">Visit the Tech Diversity website</a>
+                <p>I used JavaScript and React to connect the back end data (Django Rest Framework) with the front end. 
+                    I deployed the front end on Netlify.</p>
+                <p>My contributions include:</p>
+                <ul>
+                    <li>a carousel to showcase the 'hero' cards</li>
+                    <li>the ability to add, edit or hide hero cards when logged in</li>
+                    <li>styling the hero and profile cards</li>
+                </ul>
+                <a href="https://warm-creponne-806b0e.netlify.app/" target="_blank">Visit the Tech Diversity website</a>
             </div>
             <a href="showcase.html" id="btn">All projects</a>
         </section>
