--- a/showcase/flappy-pig.html
+++ b/showcase/flappy-pig.html
@@ -14,7 +14,7 @@
                 <h1>Flappy Pig</h1>
                 <p class="tag">Solo game project</p>
                 <p>Flappy Pig is a farm-themed version of the popular 2013 game, Flappy Bird.</p>
-                <p>I was provided source-code as part of Harvards CS50 Introduction to Game Design course.</p>
+                <!-- <p>I was provided source-code as part of Harvards CS50 Introduction to Game Design course.</p> -->
                 <p>Using Lua and Love2D, I edited the existing code to enhance game play including:</p>
                 <ul>
                     <li>randomising the vertical gap between pipes</li>
