adde hover to reveal, tidied css

--- a/showcase/showcase.html
+++ b/showcase/showcase.html
@@ -26,7 +26,14 @@
 
         <section class="showcase-section">
             <div class="project-card">
-                <a href="tech-diversity.html" class="project-img"><img src="images/group-project.png"><p class="hide">DEMO VIDEO</p></a>
+                <div class="project-link">
+                    <a href="tech-diversity.html">
+                        <img class="project-img" src="images/group-project.png">
+                        <div class="overlay">
+                            <p class="overlay-text">video demo</p>
+                        </div>
+                    </a>
+                </div>
                 <div class="project-details">
                     <h2>Tech Diversity</h2>
                     <p>Group project - A website that showcases diversity in tech and inspires women to pursue a career in tech.</p>
@@ -39,7 +46,14 @@
                 </div>
             </div>
             <div class="project-card">
-                <a href="healium.html" class="project-img"><img src="images/crowdfunding.png"><p>Demo video</p></a>
+                <div class="project-link">
+                    <a href="healium.html">
+                        <img class="project-img" src="images/crowdfunding.png">
+                        <div class="overlay">
+                            <p class="overlay-text">video demo</p>
+                        </div>
+                    </a>
+                </div>
                 <div class="project-details">
                     <h2>Healium</h2>
                     <p>Solo project - Crowdfunding website to help people financially recover from family and domestic abuse.</p>
@@ -53,7 +67,14 @@
                 </div>
             </div>
             <div class="project-card">
-                <a href="she-codes-news.html" class="project-img"><img src="images/django-news.png"><p>Demo video</p></a>
+                <div class="project-link">
+                    <a href="she-codes-news.html">
+                        <img class="project-img" src="images/django-news.png">
+                        <div class="overlay">
+                            <p class="overlay-text">video demo</p>
+                        </div>
+                    </a>
+                </div>
                 <div class="project-details">
                     <h2>She Codes News</h2>
                     <p>Solo project - A She Codes news website for users to create and share information.</p>
@@ -66,7 +87,14 @@
                 </div>
             </div>
             <div class="project-card">
-                <a href="flappy-pig.html" class="project-img"><img src="images/flappypig1.PNG"><p>Demo video</p></a>
+                <div class="project-link">
+                    <a href="flappy-pig.html">
+                        <img class="project-img" src="images/flappypig1.PNG">
+                        <div class="overlay">
+                            <p class="overlay-text">video demo</p>
+                        </div>
+                    </a>
+                </div>
                 <div class="project-details">
                     <h2>Flappy Pig</h2>
                     <p>Solo project - A farm themed version of the popular 2013 game, Flappy Bird.</p>
