fixed css on buttons

--- a/showcase/healium.html
+++ b/showcase/healium.html
@@ -21,7 +21,7 @@
                     <li>randomly generated user names to help protect the users identity</li>
                     <li>the ability for users to create a crowdfunding project, or pledge to an existing project</li>
                 </ul>
-                <a href="https://keen-gecko-1cbdfe.netlify.app/" target="_blank">Visit the Healium website</a>
+                <a class="web-link" href="https://keen-gecko-1cbdfe.netlify.app/" target="_blank">Visit the Healium website</a>
             </div>
             <a href="showcase.html" id="btn">All projects</a>
         </section>
