--- a/showcase/tech-diversity.html
+++ b/showcase/tech-diversity.html
@@ -23,7 +23,7 @@
                     <li>the ability to add, edit or hide hero cards when logged in</li>
                     <li>styling the hero and profile cards</li>
                 </ul>
-                <a href="https://warm-creponne-806b0e.netlify.app/" target="_blank">Visit the Tech Diversity website</a>
+                <a class="web-link" href="https://warm-creponne-806b0e.netlify.app/" target="_blank">Visit the Tech Diversity website</a>
             </div>
             <a href="showcase.html" id="btn">All projects</a>
         </section>
