added videos for tech diversity and healium

--- a/showcase/healium.html
+++ b/showcase/healium.html
@@ -30,7 +30,7 @@
 
         <section class="showcase-section">
             <!-- <div class="project-card"> -->
-            <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+            <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             <!-- </div> -->
         </section>
     </main>  
