--- a/showcase/tech-diversity.html
+++ b/showcase/tech-diversity.html
@@ -32,7 +32,7 @@
 
         <section class="showcase-section">
             <!-- <div class="project-card"> -->
-            <iframe src="https://www.youtube.com/embed/9Mwzu6QFaTg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+            <iframe src="https://www.youtube.com/embed/1qPmXyKefJc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
             <!-- </div> -->
         </section>
     </main>  
