changed style to match showcase style

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         </nav>
     </header>
     <main>
-        <h1>Jessica Hek</h1>
         <!-- ABOUT ME -->
         <section id="about-me">
-            <img id="profile-img" src="images/me3.png" alt="Profile picture of Jessica Hek">
-            <div id="mini-nav">
-                <p>I'm a full stack developer with a background in business process improvement.<br/><br/>
-                I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
-                <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
-                <a class="contact-me" href="contact.html">Contact me</a>
+            <h1>Jessica Hek</h1>
+            <div id="profile">
+                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
+                <div id="mini-nav">
+                    <p>I'm a full stack developer with a background in business process improvement.<br/><br/>
+                    I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
+                    <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
+                    <a class="contact-me" href="contact.html">Contact me</a>
+                </div>
             </div>
         </section>
         <!-- PROJECTS -->
