added videos to portfolio

--- a/crowdfunding.html
+++ b/crowdfunding.html
@@ -26,6 +26,8 @@
         <h1>Crowdfunding website</h1>
         <section id="projects">
         <div>
+            <iframe src="https://youtube.com/embed/c-oBmtCUVyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
+
             <!-- <h2>Screenshots</h2> -->
             <a href="screenshots/Healium-home-page.png" target="_blank">
                 <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium home page">
