--- a/news.html
+++ b/news.html
@@ -26,10 +26,7 @@
         <h1>News site</h1>
         <section id="projects">
         <div>
-            <!-- <h2>Screenshots</h2> -->
-            <a href="screenshots/django-news.png" target="_blank">
-                <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
-            </a>
+            <iframe src="https://www.youtube.com/embed/L_kt5VzdSQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="Youtube video of Flappy Bird game play with walk-through of code improvements"></iframe>
         </div>
         <div>
             <h2>Brief</h2>
