added tech diversity to projects

--- a/index.html
+++ b/index.html
@@ -49,12 +49,6 @@
                     <i>JavaScript</i>
                     <i>Django Rest Framework</i>
                 </a>
-                <a class="card" href="flappy-pig.html">
-                    <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
-                    <p class="card-title">Flappy pig</p>
-                    <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
-                    <i>Lua</i>
-                </a>
                 <a class="card" href="news.html">
                     <img src="screenshots/django-news.png" alt="Screenshot of front page for news site">
                     <p class="card-title">News site</p>
@@ -63,6 +57,20 @@
                     <i>Django</i>
                     <i>HTML</i>
                     <i>CSS</i>
+                </a>
+                <a class="card" href="flappy-pig.html">
+                    <img src="images/flappypig1.PNG" alt="Screenshot of flappy pig game">
+                    <p class="card-title">Flappy pig</p>
+                    <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
+                    <i>Lua</i>
+                </a>
+                <a class="card" href="techdiversity.html">
+                    <img src="images/group-project.png" alt="Screenshot of Tech Diversity">
+                    <p class="card-title">Tech Diversity</p>
+                    <p>A She Codes website designed to showcase diversity in the tech industry and inspire the next generation.</p>
+                    <i>React</i>
+                    <i>JavaScript</i>
+                    <i>Django Rest Framework</i>
                 </a>
                 <a class="card" href="weather.html">
                     <img src="images/weather-app.jpg" alt="Hand holding a phone with a weather application open">
