--- a/all-projects.html
+++ b/all-projects.html
@@ -26,21 +26,11 @@
     <main>
         <!-- ABOUT ME -->
         <section id="about-me">
-            <h1>Jessica Hek</h1>
-            <div id="profile">
-                <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
-                <div id="mini-nav">
-                    <p>I'm a full stack developer with a background in business process improvement.<br/><br/>
-                    I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
-                    <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
-                    <a class="contact-me" href="contact.html">Contact me</a>
-                </div>
-            </div>
+            <h1>All projects</h1>
         </section>
         <!-- PROJECTS -->
         <section id="projects-section">
-            <h2>Featured projects</h2>
-            <div id="featured-projects">
+            <div>
                 <a class="card" href="crowdfunding.html">
                     <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
                     <p class="card-title">Crowdfunding website</p>
@@ -64,9 +54,27 @@
                     <p>A 2D farm-themed game based on the 2013 game, Flappy Bird</p>
                     <i>Lua</i>
                 </a>
-            </div>
-            <div>
-            <a href="all-projects.html">All projects</a>
+                <a class="card" href="techdiversity.html">
+                    <img src="images/group-project.png" alt="Screenshot of Tech Diversity">
+                    <p class="card-title">Tech Diversity</p>
+                    <p>A She Codes website designed to showcase diversity in the tech industry and inspire the next generation.</p>
+                    <i>React</i>
+                    <i>JavaScript</i>
+                    <i>Django Rest Framework</i>
+                </a>
+                <a class="card" href="weather.html">
+                    <img src="images/weather-app.jpg" alt="Hand holding a phone with a weather application open">
+                    <p class="card-title">Weather app</p>
+                    <p>An app that processes csv files containing data about the weather, and converts them into meaningful text-based summaries.</p>
+                    <i>Python</i>
+                </a>
+                <a class="card" href="portfolio.html">
+                    <img src="images/portfolio.jpg" alt="Screenshot of portfolio home page">
+                    <p class="card-title">My portfolio</p>
+                    <p>This online portfolio, created during the She Codes Plus program</p>
+                    <i>HTML</i>
+                    <i>CSS</i>
+                </a>
             </div>
         </section>
     </main>  
