added koorta game

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
             <div id="profile">
                 <img id="profile-img" src="images/bio-pic3.png" alt="Profile picture of Jessica Hek">
                 <div id="mini-nav">
-                    <p>I'm a full stack developer with a background in business process improvement.<br/><br/>
-                    I live in Perth, Western Australia and I'm currently part of the She Codes Plus cohort for 2022 - 2023.</p>
-                    <a href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
+                    <p>
+                    I'm a full stack developer with a background in business process improvement, policy development and communications.
+                    <br/><br/>
+                    I completed the She Codes Plus program in early 2023 and now return as a mentor. 
+                    </p>
+                    <a class="contact-me" href="images/Jessica-Hek.pdf" download target="_blank">Download resume</a>
                     <a class="contact-me" href="contact.html">Contact me</a>
                 </div>
             </div>
@@ -41,6 +44,13 @@
         <section id="projects-section">
             <h2>Recent projects</h2>
             <div>
+                <a class="card" href="koorta.html">
+                    <img src="images/koorta1.png" alt="Screenshot of Koorta dancing spider game playthrough">
+                    <p class="card-title">Koorta dancing spider game</p>
+                    <p>A 3D game where you make the spider dance, inspired by the local peacock spider in Perth, Western Australia.</p>
+                    <i>Unity</i>
+                    <i>C#</i>
+                </a>
                 <a class="card" href="crowdfunding.html">
                     <img src="screenshots/Healium-home-page.png" alt="Screenshot of Healium crowdfunding home page">
                     <p class="card-title">Crowdfunding website</p>
